syntax = "proto3";
package user;

option go_package = "user-service/pb/user;user";

message RegisterUserRequest {
    string full_name = 1;
    string password = 2;
    string phone_number = 3;
    string email = 4;
}    