syntax = "proto3";
package user;

option go_package = "user-service/pb/user;user";

import "user/user_input_message.proto";
import "user/user_output_message.proto";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (Vehicle) {}
}    